# Popyachsa-AirPlay

./: .gitignore  .gitmodules  BUILD.md  Cargo.toml  NOTICE  README.md
airplay-lib/: Cargo.toml
airplay-lib-sys/: Cargo.toml
airplay-lib-sys/src/: lib.rs
airplay-lib/src/: lib.rs
app/: Cargo.toml  build.rs  installer.nsi  make-dist.ps1
app/installer/: LICENSE.txt  popyachsa-airplay.nsi
app/src/: about_ui.rs  autostart.rs  config.rs  engine.rs  engine_linux.rs  engine_macos.rs  engine_stub.rs  fonts.rs  i18n.rs  lib.rs  main.rs  monitors.rs  settings_ui.rs  status.rs  update.rs  update_linux.rs  update_macos.rs
app/tools/: gen-icon.py  gen-installer-art.py  make-update.py
packaging/: README.md  build-appimage.sh  build-apt-repo.sh  build-deb.sh  build-dnf-repo.sh  build-rpm.sh
packaging/aur/: .SRCINFO  PKGBUILD  README.md
packaging/flatpak/: com.popyachsa.AirPlay.yml
packaging/shared/: com.popyachsa.AirPlay.desktop  com.popyachsa.AirPlay.metainfo.xml
uxplay-patches/: README.md  airplay_core.cpp  airplay_core.h  avsample_sink.m  clean-full-vs-v1.73.6.diff
